--- a/src/components/ContactForm/style.css
+++ b/src/components/ContactForm/style.css
@@ -1,8 +1,7 @@
 .contactform{
-    margin: 10px;
+    margin: 10px 0;
     background-color: rgba(255, 255, 255, 0.1);
     padding: 5px 5px 5px 20px;
-    /* width: 400px; */
     display: flex;
     justify-content: space-between;
     border-radius: 30px;
