--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,5 +1,50 @@
 .footer{
-    color: white;
-    padding: 10px 20px;
+    color: #aaa;
+    padding: 50px 20px;
     background-color: rgba(255, 255, 255, 0.1);
+    display: flex;
+}
+.footer div{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+.footer p{
+    margin-bottom: 20px;
+}
+.footer a{
+    color: #aaa;
+    text-decoration: none;
+    margin-bottom: 5px;
+}
+
+.footer-heading{
+    font-size: 20px;
+    font-weight: 600;
+    color: white;
+    margin-bottom: 20px;
+}
+
+.footer .icons{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+}
+.footer .icons img{
+    height: 30px;
+    width: 30px;
+    margin-right: 20px;
+    border-radius: 5px;
+}
+
+.footer .contact-container{
+    flex: 2;
+}
+
+.address-container{
+    flex: 2;
+}
+.links-contianer{
+    flex: 1;
 }
