--- a/src/components/Cards/Card/style.css
+++ b/src/components/Cards/Card/style.css
@@ -1,5 +1,5 @@
 .service-card{
-    width: 20vw;
+    width: 30vw;
     color: white;
     background-color: rgba(255, 255, 255, 0.1);
     display: flex;
@@ -9,7 +9,9 @@
     margin: 10px;
     cursor: pointer;
     border:1px solid transparent;
+    box-sizing: border-box;
 }
+
 .service-card:hover{
     background-color: rgba(255, 255, 255, 0.2);
     border:1px solid rgba(30, 143, 255, 0.3);
