--- a/src/components/Cards/FounderCard/style.css
+++ b/src/components/Cards/FounderCard/style.css
@@ -1,10 +1,10 @@
 .founder-card{
-    margin: 50px 10vw;
+    margin: 50px 5vw;
     display: flex;
     align-items: center;
 }
 
-.founder-card img{
+.founder-card .img{
     width: 300px;
     height: 300px;
     border-radius: 10px;
@@ -16,7 +16,6 @@
 }
 
 .founder-card div{
-   padding: 20px 50px;
    color: white;
    border-radius: 20px;
 }
@@ -38,13 +37,19 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    flex: 1;
 }
 .founder-card .img-container .box{
-    width: 300px;
-    height: 300px;
+    width: 100px;
+    height: 250px;
     padding: 0;
     background-color: rgba(255, 255, 255, 0.2);
     position: absolute;
     bottom: 0;
     right: 0;
+}
+
+.text-container{
+    flex: 2;
+    padding-left: 20px;
 }
