--- a/src/components/Cards/GetFreeConsultation/style.css
+++ b/src/components/Cards/GetFreeConsultation/style.css
@@ -1,12 +1,11 @@
 .get-free-consultation{
-    width: 76vw;
-    margin: 50px auto;
+    margin: 50px 3vw;
     background-color: rgba(255, 255,255, 0.1);
     position: relative;
     color: white;
     display: flex;
     justify-content: space-between;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 .text{
@@ -16,13 +15,11 @@
     text-align: left;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 .text-heading{
     text-align: left;
     font-weight: 600;
     font-size: 40px;
-    margin-bottom: 10px;
     padding-left: 20px;
 }
 .text p{
@@ -31,13 +28,14 @@
 
 .img-contianer{
     flex: 1;
-    padding-left: 100px;
-    overflow: hidden; border-radius: 10px;
+    padding-left: 150px;
+    overflow: hidden; 
+    border-radius: 20px;
 }
 
 .get-free-consultation img{
     width: 100%;
-    border-radius: 10px;
+    border-radius: 20px;
     transform: rotate(15deg) scale(1.4);
 }
 
