--- a/src/components/ContactForm/HomePageContact/style.css
+++ b/src/components/ContactForm/HomePageContact/style.css
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: space-between;
     border-radius: 30px;
+    z-index: 2;
 }
 .contactform input{
     width: 300px;
