--- a/src/components/Cards/GetFreeConsultation/style.css
+++ b/src/components/Cards/GetFreeConsultation/style.css
@@ -1,6 +1,7 @@
 .get-free-consultation{
     margin: 50px 3vw;
     background-color: rgba(255, 255,255, 0.1);
+    background-color: #222222;
     position: relative;
     color: white;
     display: flex;
