--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,7 +1,7 @@
 .footer{
     color: #aaa;
     padding: 50px 20px;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: #111;
     display: flex;
 }
 .footer div{
