--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,10 @@ body {
 .page{
   min-height: 100vh;
   background-color: #161616;
+  background-image: url("./assets/background.gif");
+  background-size: contain;
 }
+
 
 .heading{
     color: white;
