--- a/src/components/Cards/FounderCard/style.css
+++ b/src/components/Cards/FounderCard/style.css
@@ -2,6 +2,7 @@
     margin: 50px 5vw;
     display: flex;
     align-items: center;
+    background-color: #111;
 }
 
 .founder-card .img{
@@ -9,6 +10,7 @@
     height: 300px;
     border-radius: 10px;
     z-index: 2;
+    transition: all 0.3s ease; 
 }
 
 .founder-card img:hover{
