--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body {
 .page{
   min-height: 100vh;
   background-color: #161616;
-  background-image: url("./assets/background.gif");
+  background-image: url("https://res.cloudinary.com/dlksyxvtd/image/upload/v1706423658/vebers/va3ltcbtsqvzzshjalva.gif");
   background-size: contain;
 }
 
