--- a/src/components/ServicesSection/style.css
+++ b/src/components/ServicesSection/style.css
@@ -3,3 +3,9 @@
     flex-wrap: wrap;
     justify-content: center;
 }
+
+@media screen and (max-width: 650px) {
+    .service-container{
+        display: none;
+    }
+}
