--- a/src/components/Cards/Card/style.css
+++ b/src/components/Cards/Card/style.css
@@ -10,6 +10,7 @@
     cursor: pointer;
     border:1px solid transparent;
     box-sizing: border-box;
+    min-width: 300px;
 }
 
 .service-card:hover{
@@ -56,4 +57,12 @@
 
 .description{
     font-size: 18px;
+}
+
+
+@media screen and (max-width: 650px) {
+    .service-card{
+        width: 80vw;
+        height: 100%;
+    }
 }
