--- a/src/components/ContactForm/HomePageContact/style.css
+++ b/src/components/ContactForm/HomePageContact/style.css
@@ -8,7 +8,7 @@
     z-index: 2;
 }
 .contactform input{
-    width: 300px;
+    max-width: 300px;
     color: white;
     background-color: transparent;
     border: none;
@@ -23,4 +23,19 @@
     padding: 15px 20px;
     border: none;
     border-radius: 30px;
+}
+
+@media screen and (max-width: 650px) {
+    .contactform button{
+        height: fit-content;
+    }
+.contactform{
+    padding: 0;
+    background-color: transparent;
+    flex: 1;
+}
+.contactform input{
+    display: none;
+}
+
 }
