--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -3,6 +3,8 @@
     padding: 50px 20px;
     background-color: #111;
     display: flex;
+    width: 100vw;
+    flex-wrap: wrap;
 }
 .footer div{
     display: flex;
@@ -30,6 +32,7 @@
     display: flex;
     flex-direction: row;
     padding: 0;
+    flex-wrap: wrap;
 }
 .footer .icons img{
     height: 30px;
@@ -47,4 +50,11 @@
 }
 .links-contianer{
     flex: 1;
+}
+
+
+@media screen and (max-width: 500px) {
+    .footer{
+        display: block;
+    }
 }
