--- a/src/components/LandingInfo/style.css
+++ b/src/components/LandingInfo/style.css
@@ -1,4 +1,5 @@
 .landingInfo{
+    width: 100vw;
     color: white;
     margin: auto;
     padding: 100px;
@@ -9,7 +10,7 @@
 }
 
 .landingInfo h1{
-    font-size: 60px;
+    font-size: 8vw;
     margin-bottom: 10px;
     text-align: center;
 }
@@ -20,7 +21,8 @@
     font-size: 18px;
 }
 
-.landingInfo .img{
-    height: 30vh;
-    margin-top: 50px;
-}
+/* @media screen and (max-width: 600px) {
+    .downarrow{
+        display: none;
+    }
+} */
