--- a/src/components/Testimonials/style.css
+++ b/src/components/Testimonials/style.css
@@ -5,4 +5,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    width: 100vw;
+}
+
+@media screen and (max-width: 650px) {
+    .testimonial-container{
+        display: none;
+    }
 }
