--- a/src/screens/ValentineDiary/style.css
+++ b/src/screens/ValentineDiary/style.css
@@ -8,6 +8,7 @@
     background-color: #CC1C46;
     color: white;
     font-family: 'Fredoka', sans-serif;
+    /* font-family: monts; */
     font-size: 20px;
 }
 
@@ -83,21 +84,21 @@
 
 
 .valentine-diary  .ribbon{
-  position: fixed;
+  position: absolute;
   width: 100px;
   top: 10vh;
   transform: rotate(30deg);
   animation: bounce 2s linear infinite;
 }
 .valentine-diary  .ribbon1{
-  position: fixed;
+  position: absolute;
   width: 80px;
   top: 5vh;
   right:10vw;
   animation: bounce 2s linear infinite;
 }
 .valentine-diary .ribbon2{
-  position: fixed;
+ position: absolute;
   width: 100px;
   bottom: 10vh;
   right: 10vw;
@@ -105,7 +106,7 @@
 }
 
 .valentine-diary .ribbon4{
-  position: fixed;
+ position: absolute;
   width: 100px;
   bottom: 15vh;
   left: 10vw;
@@ -150,9 +151,20 @@
     background-color: antiquewhite;
     color: #444;
     display: flex;
-    flex-wrap: wrap;
-     /* z-index: 999;
-    position: relative; */
+    flex-direction: row;
+    justify-content: space-around;
+}
+#about div{
+  max-width: 400px;
+  margin: 0 30px;
+}
+
+#about img{
+  width: 40vw;
+  margin: 10px;
+  opacity: 0.8;
+  position: relative;
+  z-index: 89;
 }
 
 .valentine-diary .container{
@@ -169,9 +181,10 @@
 }
 
 #about .inner-container div{
+    margin: 10px;
     padding: 10px;
-    width: 20vw;
-    min-width: 200px;
+    border-radius: 10px;
+    max-width: 250px;
 }
 
 #about .bold{
@@ -193,8 +206,17 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-     z-index: 999;
+    z-index: 999;
     position: relative;
+    justify-content: space-around;
+}
+#features img{
+  width: 35vw;
+  /* margin-right: 10vw; */
+}
+#features div{
+  margin: 0 30px;
+  max-width: 400px;
 }
 
 #features h2, #contact-us h2{
@@ -217,45 +239,64 @@
     justify-content: center;
 }
 .plan-div{
-    background-color:#CC1C46;
-    color: white;
+    background-color: white;
+    color:#444;
     z-index: 89;
     border-radius: 10px;
     margin: 10px;
     padding-bottom: 10px;
+    max-width: 300px;
+     border: 2px solid antiquewhite;
 }
+.plan-div:hover{
+  border: 2px solid #CC1C46;
+}
+
 .plan-div div{
     padding: 10px;
 }
 .plan-div h3{
     font-weight: bold;
-    background-color: aliceblue;
+    text-align: center;
     color: #CC1C46;
+    background-color: #CC1C46;
+    color: white;
     padding: 10px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    text-transform: uppercase;
 }
+#plans .subtitle{
+  text-align: center;
+}
+
 .plan-div b{
-    color: greenyellow;
+    color: #CC1C46;
+    font-weight: 100;
+    font-size: 14px;
 }
 
 .plans .additionals{
     margin:0 0 0 0;
 }
 
-.valentine-diary button,.valentine-diary a{
-    background-color: dodgerblue;
-    padding: 10px;
-    margin: 10px 0;
-    border-radius: 10px;
-    position:relative;
-    z-index: 89999;
+.buy{
+  border:2px solid #CC1C46;
+  padding: 5px 20px;
+  border-radius: 10px;
+  max-width: 200px
+}
+.fa-chevron-right{
+  font-size: 14px;
+}
+
+.price{
+  font-weight: bold;
+  font-size: 30px;
 }
 
 /* contact-us */
 #contact-us{
-    /* background-color: antiquewhite; */
-    /* color: black; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -280,6 +321,12 @@
     padding: 10px;
     height: fit-content;
     border-radius: 10px;
+    width: 250px;
+    cursor: pointer;
+}
+#contact-us .inner-container div:hover{
+  background-color: antiquewhite;
+  color: #444;
 }
 #contact-us button{
     color: white;
@@ -299,6 +346,7 @@
     padding: 20px;
     background-color: antiquewhite;
     color: #444;
+    position: relative;
 }
 
 
@@ -308,4 +356,20 @@
     position: absolute;
     top: 0;
     padding: 20px;
+}
+
+
+.contact_link{
+  background-color: transparent;
+}
+
+
+
+@media screen and (max-width: 700px) {
+  #about img{
+    display: none;
+  }
+  #features img{
+    display: none;
+  }
 }
