--- a/src/components/Testimonials/style.css
+++ b/src/components/Testimonials/style.css
@@ -10,6 +10,6 @@
 
 @media screen and (max-width: 650px) {
     .testimonial-container{
-        display: none;
+        /* display: none; */
     }
 }
