--- a/src/components/Cards/Card/style.css
+++ b/src/components/Cards/Card/style.css
@@ -59,10 +59,51 @@
     font-size: 18px;
 }
 
+.out-description{
+    color: white;
+     width: 80vw;
+     margin: auto;
+}
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 450px) {
     .service-card{
         width: 80vw;
         height: 100%;
+        padding: 15px;
+    }
+
+    .client-name{
+       font-weight: 100;
+    }
+
+    .customer{
+       margin-top: 0px;
+       border-top: none;
+       float: right;
+       font-size: 14px;
+    }
+
+    .description{
+        font-size: 14px;
+    }
+
+    .customer div{
+        margin-left: 0px;
+    }
+
+    .service-div{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .service-card .icon{
+        margin-bottom: 0;
+    }
+}
+
+@media screen and (min-width: 450px) {
+    .out-description{
+        display: none;
     }
 }
