--- a/src/components/Cards/FounderCard/style.css
+++ b/src/components/Cards/FounderCard/style.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     background-color: #111;
+    padding: 20px;
 }
 
 .founder-card .img{
@@ -11,6 +12,7 @@
     border-radius: 10px;
     z-index: 2;
     transition: all 0.3s ease; 
+    border-radius: 50%;
 }
 
 .founder-card img:hover{
@@ -45,4 +47,30 @@
 .text-container{
     flex: 2;
     padding-left: 20px;
+}
+
+
+@media screen and (max-width: 700px) {
+    .founder-card{
+        flex-direction: column;
+        text-align: center;
+        padding: 10px;
+    }
+    .founder-card .img{
+        margin: 10px;
+        width: 250px;
+        height: 250px;
+    }
+
+    .founder-card .img-container{
+        width: 80%;
+    }
+
+}
+
+@media screen and (max-width: 700px) {
+    .text-container p{
+        font-size: 14px;
+    }
+
 }
