--- a/src/components/Faqs/style.css
+++ b/src/components/Faqs/style.css
@@ -12,6 +12,7 @@
 .faq{
     margin: auto;
     font-size: 18px;
+    width: 100%;
 }
 
 .question{
@@ -20,18 +21,18 @@
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
-    margin-top: 10px;
-    width: 94vw;
+    width: 80%;
+    margin: 5px auto;
 }
 
 .answer{
     padding: 20px;
-    margin-bottom: 10px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     border-radius: 10px;
     display: none;
-    width: 94vw;
+    width: 80%;
+    margin: 5px auto;
 }
 .question:hover, .active-question{
     border: 1px solid rgba(30, 143, 255, 0.3);
@@ -43,4 +44,16 @@
 
 .plus{
     cursor: pointer;
+}
+
+
+
+@media screen and (max-width: 450px) {
+    .question{
+        font-size: 14px;
+    }
+    .answer{
+        font-size: 14px;
+    }
+
 }
