--- a/src/components/LandingInfo/style.css
+++ b/src/components/LandingInfo/style.css
@@ -1,18 +1,27 @@
 .landingInfo{
     width: 100vw;
+    height: 90vh;
     color: white;
     margin: auto;
-    padding: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+
+.landingInfo .text-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .landingInfo h1{
     font-size: 8vw;
-    margin-bottom: 10px;
+    margin: 30px;
     text-align: center;
+    max-width: 80vw;
 }
 
 .landingInfo p{
@@ -21,8 +30,13 @@
     font-size: 18px;
 }
 
-/* @media screen and (max-width: 600px) {
-    .downarrow{
-        display: none;
+.landingInfo .fa-angle-down{
+    position: absolute;
+    bottom: 20px;
+}
+
+@media screen and (max-width: 450px) {
+    .landingInfo h1{
+        margin: 10px;
     }
-} */
+}
