--- a/src/components/LandingInfo/style.css
+++ b/src/components/LandingInfo/style.css
@@ -1,42 +1,100 @@
-.landingInfo{
-    width: 100vw;
-    height: 90vh;
-    color: white;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+.landingInfo {
+  width: 100vw;
+  height: 90vh;
+  color: white;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
-.landingInfo .text-box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.landingInfo .text-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.landingInfo h1{
-    font-size: 8vw;
-    margin: 30px;
-    text-align: center;
-    max-width: 80vw;
+.landingInfo h1 {
+  font-size: 60px;
+  margin: 30px;
+  text-align: center;
+  max-width: 80vw;
+  font-weight: 500;
+  line-height: 80px;
 }
 
-.landingInfo p{
-    max-width: 800px;
-    text-align: center;
-    font-size: 18px;
+.landingInfo p {
+  max-width: 800px;
+  text-align: center;
+  font-size: 18px;
 }
 
-.landingInfo .fa-angle-down{
-    position: absolute;
-    bottom: 20px;
+.landingInfo .fa-angle-down {
+  position: absolute;
+  bottom: 20px;
+}
+
+.whatsapp-btn {
+  background-color: dodgerblue;
+  display: none;
+  padding: 10px 20px;
+  font-weight: 500;
+  border-radius: 30px;
+}
+
+.landingInfo .main-text{
+  color: dodgerblue;
+  transition: linear;
+  animation: text-change 1s ease-in-out forwards;
+  font-size: 90px;
+}
+
+@keyframes text-change {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
 
 @media screen and (max-width: 450px) {
-    .landingInfo h1{
-        margin: 10px;
-    }
+  .landingInfo h1 {
+    margin: 10px;
+  }
+
+  .landingInfo h1 {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .landingInfo  .main-text{
+    font-size: 40px;
+  }
+
+}
+
+@media screen and (max-width: 650px) {
+  .whatsapp-btn {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 650px) and (min-width: 450px) {
+  .landingInfo h1 {
+    font-size: 40px;
+    line-height: 50px;
+  }
+  .landingInfo  .main-text{
+    font-size: 60px;
+  }
+}
+
+
+@media screen and (max-width: 835px) and (min-width: 650px) {
+  .landingInfo h1 {
+    font-size: 50px;
+    line-height: 60px;
+  }
+  .landingInfo  .main-text{
+    font-size: 70px;
+  }
 }
