--- a/src/components/PortfolioSection/style.css
+++ b/src/components/PortfolioSection/style.css
@@ -40,8 +40,32 @@
     text-align: center;
     color: dodgerblue;
     border: 2px solid dodgerblue;
-    border-radius: 10px;
-    padding: 5px 20px;
+    border-radius: 30px;
+    padding: 15px 20px;
+}
+
+.modal{
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    background-color: rgba(0,0,0,0.8);
+    position: fixed;
+    z-index: 99999999999;
+}
+.modal .img-div{
+    width: 80%;
+    height: 80%;
+    margin: 10% 10%;
+    background-color: antiquewhite;
+}
+.modal .img-div img{
+    width: 100%;
+}
+.portfolio .cross{
+    color: white;
+    margin: 10px;
+    position: absolute;
+    right: 10%;
 }
 
 @media screen and (max-width: 450px) {
