--- a/src/components/PortfolioSection/style.css
+++ b/src/components/PortfolioSection/style.css
@@ -13,7 +13,7 @@
 
 .portfolio-inner-container{
     width: 30vw;
-    height: 250px;
+    height: 30vw;
     min-width: 300px;
     overflow: hidden;
     margin: 10px;
@@ -47,25 +47,32 @@
 .modal{
     width: 100vw;
     height: 100vh;
-    top: 0;
+    top: 10vh;
     background-color: rgba(0,0,0,0.8);
     position: fixed;
     z-index: 99999999999;
 }
 .modal .img-div{
-    width: 80%;
-    height: 80%;
-    margin: 10% 10%;
+    width: 80vw;
+    height: 80vh;
+    margin: auto;
     background-color: antiquewhite;
+    overflow: scroll;
+    border-radius: 10px;
 }
 .modal .img-div img{
     width: 100%;
 }
 .portfolio .cross{
-    color: white;
+    color: dodgerblue;
+    font-weight: bold;
+    font-size: 20px;
     margin: 10px;
     position: absolute;
     right: 10%;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 30px;
 }
 
 @media screen and (max-width: 450px) {
