--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -20,35 +20,81 @@ body {
 ::-webkit-scrollbar {
   display: none;
 }
-.page{
+.page {
   min-height: 100vh;
   width: 100vw;
   background-color: #161616;
-  background-image: url("https://res.cloudinary.com/dlksyxvtd/image/upload/v1706423658/vebers/va3ltcbtsqvzzshjalva.gif") ;
+  background-image: url("https://res.cloudinary.com/dlksyxvtd/image/upload/v1706423658/vebers/va3ltcbtsqvzzshjalva.gif");
   background-size: contain;
   position: relative;
   z-index: 1;
 }
 
-
-.heading{
-    color: white;
-    text-align: center;
-    margin-bottom: 50px;
-    font-size: 5vw;
-    margin: 25px 20px;
-}
-
-
 @media screen and (max-width: 450px) {
-  .hideOnMobile{
+  .hideOnMobile {
     display: none;
   }
-  .showOnMobile{
+  .showOnMobile {
     display: flex;
   }
 }
 
-.in-page{
+.in-page {
   z-index: 3;
+}
+
+/* 3 font-sizes */
+.heading {
+  font-size: 90px;
+  color: white;
+  text-align: center;
+}
+
+.sub-heading {
+  font-size: 60px;
+   color: white;
+   text-align: center;
+}
+
+.normal-text {
+  font-size: 20px;
+   color: white;
+}
+
+@media screen and (max-width: 450px) {
+  .sub-heading {
+    font-size: 30px;
+  }
+  .heading {
+    font-size: 40px;
+  }
+
+  .normal-text {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 650px) and (min-width: 450px) {
+  .sub-heading {
+    font-size: 40px;
+  }
+  .heading {
+    font-size: 60px;
+  }
+
+  .normal-text {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 835px) and (min-width: 650px) {
+  .sub-heading {
+    font-size: 50px;
+  }
+  .heading {
+    font-size: 70px;
+  }
+  .normal-text {
+    font-size: 18px;
+  }
 }
