--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -21,7 +21,6 @@
 }
 
 .footer-heading{
-    font-size: 20px;
     font-weight: 600;
     color: white;
     margin-bottom: 20px;
@@ -47,6 +46,7 @@
 
 .address-container{
     flex: 2;
+     color: #aaa;
 }
 .links-contianer{
     flex: 1;
